--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "gatsby": "^1.9.250",
-    "gatsby-link": "^1.6.40"
+    "gatsby": "^1.9.274",
+    "gatsby-link": "^1.6.40",
+    "gatsby-plugin-typography": "^1.7.19"
   }
 }
